form-checkout image fix

--- a/prepros.config
+++ b/prepros.config
@@ -132,13 +132,13 @@
         },
         {
           "file": "test4nails/app/helpers.php",
-          "mtimeMs": 1720110115867.7664,
-          "date": "2024-07-04T16:21:59.504Z"
+          "mtimeMs": 1725391018063.0747,
+          "date": "2024-09-03T19:17:00.382Z"
         },
         {
           "file": "test4nails/app/includes.php",
-          "mtimeMs": 1723107560583.409,
-          "date": "2024-08-08T08:59:22.748Z"
+          "mtimeMs": 1725119957893.4546,
+          "date": "2024-08-31T15:59:20.209Z"
         },
         {
           "file": "test4nails/app/settings.php",
@@ -147,8 +147,8 @@
         },
         {
           "file": "test4nails/app/woo4nails.php",
-          "mtimeMs": 1723122493420.2876,
-          "date": "2024-08-08T13:08:15.921Z"
+          "mtimeMs": 1725698727099.5571,
+          "date": "2024-09-07T08:45:29.746Z"
         },
         {
           "file": "test4nails/assets/css/PayPal_logo.svg",
@@ -242,8 +242,8 @@
         },
         {
           "file": "test4nails/assets/css/main.css",
-          "mtimeMs": 1716291945665.5854,
-          "date": "2024-05-21T11:45:48.678Z"
+          "mtimeMs": 1725120978448.3792,
+          "date": "2024-08-31T16:16:21.545Z"
         },
         {
           "file": "test4nails/assets/css/normalize.css",
@@ -577,8 +577,8 @@
         },
         {
           "file": "test4nails/assets/js/add-to-cart.js",
-          "mtimeMs": 1719831018216.4883,
-          "date": "2024-07-01T10:50:24.669Z"
+          "mtimeMs": 1725383121976.7754,
+          "date": "2024-09-03T17:05:24.434Z"
         },
         {
           "file": "test4nails/assets/js/add-to-cart.min.js",
@@ -602,8 +602,8 @@
         },
         {
           "file": "test4nails/woocommerce/cart/cart.php",
-          "mtimeMs": 1722321457990.1277,
-          "date": "2024-07-30T06:37:40.415Z"
+          "mtimeMs": 1725383019144.5027,
+          "date": "2024-09-03T17:03:41.635Z"
         },
         {
           "file": "test4nails/assets/js/product.js",
@@ -642,8 +642,8 @@
         },
         {
           "file": "test4nails/woocommerce/single-product.php",
-          "mtimeMs": 1717153112018.1995,
-          "date": "2024-05-31T10:58:34.532Z"
+          "mtimeMs": 1725265847089.561,
+          "date": "2024-09-02T08:30:49.770Z"
         },
         {
           "file": "wp-config.php",
@@ -662,8 +662,8 @@
         },
         {
           "file": "test4nails/woocommerce/checkout/form-checkout.php",
-          "mtimeMs": 1719515274556.4917,
-          "date": "2024-06-27T19:08:00.006Z"
+          "mtimeMs": 1725906892958.1355,
+          "date": "2024-09-09T18:34:59.881Z"
         },
         {
           "file": "checkout1.js",
@@ -1562,8 +1562,8 @@
         },
         {
           "file": "test4nails/widgets/product/sale-discount.php",
-          "mtimeMs": 1720618528824.9375,
-          "date": "2024-07-10T13:35:31.498Z"
+          "mtimeMs": 1725699293586.2925,
+          "date": "2024-09-07T08:54:56.064Z"
         },
         {
           "file": "test4nails/woocommerce/single-product/sale-icon.php",
@@ -5579,6 +5579,26 @@
           "file": "test4nails/assets/js/main.js",
           "mtimeMs": 1722436853913.3909,
           "date": "2024-07-31T14:40:56.633Z"
+        },
+        {
+          "file": "test4nails/widgets/product/quantity-modal.php",
+          "mtimeMs": 1725372601211.7476,
+          "date": "2024-09-03T14:10:10.873Z"
+        },
+        {
+          "file": "test4nails/woocommerce/archive-product.php",
+          "mtimeMs": 1725265245506.54,
+          "date": "2024-09-02T08:20:47.828Z"
+        },
+        {
+          "file": "test4nails/widgets/product/archive-message-modal.php",
+          "mtimeMs": 1725119513380.869,
+          "date": "2024-08-31T15:51:55.922Z"
+        },
+        {
+          "file": "test4nails/assets/js/cart.js",
+          "mtimeMs": 1725383078497.2969,
+          "date": "2024-09-03T17:04:40.949Z"
         }
       ]
     },
